<resources>
    <string name="app_name">CantDecide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="charities">Charities</string>
    <string name="settings">Settings</string>
    <string name="Charity_Description">Charity Description goes here!</string>
    <string name="start_randomizer">Start Randomizer</string>
    <string name="allow_duplicates">Allow Duplicates</string>
    <string name="save_rolled_charities">Save Rolled Charities</string>
    <string name="visit_their_website">Visit Their Website!</string>
    <string name="save_charity">Save Charity</string>
    <string name="roll_again">Roll Again</string>
    <string name="select_a_cause">Select A Cause</string>
</resources>